# devsecret

./: .gitignore  LICENSE  README.md  project_report.md  pyproject.toml
devsecret/: __init__.py  __main__.py  cli.py  crypto.py  vault.py
devsecret.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  constants.py  test_cli.py  test_crypto.py  test_vault.py
